[gd_scene load_steps=2 format=3 uid="uid://dq7hx0v3m0n8q"]

[ext_resource type="Script" path="res://assets/ui/round_summary.gd" id="1_summary"]

[node name="RoundSummary" type="ColorRect"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.8)
script = ExtResource("1_summary")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -200.0
offset_right = 300.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBox" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="Title" type="Label" parent="Panel/VBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Round Complete"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="Player1Summary" type="Label" parent="Panel/VBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Protagonist: 3 tricks → 6 points (Total: 6)"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Player2Summary" type="Label" parent="Panel/VBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Antagonist: 8 tricks → 6 points (Total: 6)"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Spacer" type="Control" parent="Panel/VBox"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="ContinueButton" type="Button" parent="Panel/VBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Continue to Next Round"
